// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`byName integration test mostly real modules should return matching time entries 1`] = `
Object {
  "body": Object {
    "serialize() of": Array [
      Object {
        "billableHours": 3.5,
        "comment": "None",
        "cost": 770,
        "date": "2020-11-06",
        "hours": 3.5,
        "id": 1,
        "name": "Programmering",
      },
      Object {
        "billableHours": 4.5,
        "comment": "None",
        "cost": 990,
        "date": "2020-11-06",
        "hours": 4.5,
        "id": 2,
        "name": "Programmering",
      },
      Object {
        "billableHours": 2.7,
        "comment": "None",
        "cost": 594,
        "date": "2020-11-05",
        "hours": 2.7,
        "id": 3,
        "name": "Programmering",
      },
    ],
  },
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
  },
  "statusCode": 200,
}
`;

exports[`hours integration test mostly real modules should return meta data for time entries 1`] = `
Object {
  "body": Object {
    "serialize() of": Object {
      "totalBillableHours": 10.7,
      "totalBillableHoursPerWeek": Object {
        "w45": 10.7,
      },
    },
  },
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
  },
  "statusCode": 200,
}
`;

exports[`invoice integration test mostly real modules should return relevant invoice information 1`] = `
Object {
  "body": Object {
    "serialize() of": Object {
      "totalExcludingVAT": "2 354,00 kr",
    },
  },
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
  },
  "statusCode": 200,
}
`;
